--- a/index.html
+++ b/index.html
@@ -1,54 +1,62 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
+  <meta content="Restaurant reviews app" name="description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+  <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css">
   <title>Restaurant Reviews</title>
 </head>
 
 <body>
+
   <header>
     <nav>
       <h1>
-	    <a href="/">Restaurant Reviews</a>
+	    <a href="/index.html">Restaurant Reviews</a>
 	  </h1>
     </nav>
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
-      <div id="map"></div>
+  
+    <section id="map-container" >
+      <div id="map" role="application" title="Google Maps" aria-label="Google Maps shows selected restaurants">
+	  </div>
     </section>
+	
     <section>
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select aria-label="neighborhoods-select" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select aria-label="select neighborhood" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select aria-label="cuisines-select" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select aria-label="select cuisine" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
       </div>
       <ul id="restaurants-list"></ul>
     </section>
+	
   </main>
 
+  <footer id="footer">
+    Copyright (c) 2017
+	<a href="/" aria-labelledby="footer">
+	  <strong>Restaurant Reviews</strong>
+	</a> All Rights Reserved.
+  </footer>
+  
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4--tnEiFAnCcfaZ5YV3o_shR3tJVPg6c&libraries=places&callback=initMap">
   </script>
-
-
-  <footer id="footer">
-    Copyright (c) 2017
-	<a href="/">
-	  <strong>Restaurant Reviews</strong>
-	</a> All Rights Reserved.
-  </footer>
-
+  
 </body>
 
 </html>
