--- a/restaurant.html
+++ b/restaurant.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
 
 <head>
+  <meta charset="utf-8">
+  <meta content="Restaurant reviews app" name="description">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
@@ -10,58 +14,76 @@
 </head>
 
 <body class="inside">
+
   <!-- Beginning header -->
   <header>
+  
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1><a href="/index.html">Restaurant Reviews</a></h1>
     </nav>
+	
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
-    </ul>
+    <nav id="breadcrumb-nav">
+      <ul id="breadcrumb" aria-label="Breadcrumb">
+        <li>
+          <a href="./index.html">Home</a>
+        </li>
+      </ul>
+    </nav>
     <!-- End breadcrumb -->
+	
     <!-- End nav -->
+	
   </header>
   <!-- End header -->
 
   <!-- Beginning main -->
   <main id="maincontent">
+  
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application" title="Google Maps" aria-label="Google Maps shows selected restaurants"></div>
     </section>
     <!-- End map -->
+	
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
+	
       <h1 id="restaurant-name"></h1>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
       <table id="restaurant-hours"></table>
+	  
     </section>
     <!-- end restaurant -->
+	
     <!-- Beginning reviews -->
     <section id="reviews-container">
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
+	
   </main>
   <!-- End main -->
 
   <!-- Beginning footer -->
   <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2017 <a href="/index.html" aria-labelledby="footer"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
 
   <!-- Beginning scripts -->
+  
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4--tnEiFAnCcfaZ5YV3o_shR3tJVPg6c&libraries=places&callback=initMap">
+  </script>
+  
   <!-- End scripts -->
 
 </body>
